# rust-web-app

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .rtx.toml  Brewfile  Cargo.toml  Dockerfile  Gemfile  Guardfile  Procfile  Procfile.dev  README.md  docker-build.sh  docker-compose.yml  fly.toml  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: deploy.yml  pr_validation.yml
ai-examples/: fix-font-awesome-css-usage.md
app/assets/words/: 4.txt
app/channels/: chat_channel.rb
app/channels/application_cable/: connection.rb
app/controllers/: account_controller.rb  accounts_controller.rb  application_controller.rb  chat_controller.rb  rodauth_controller.rb
app/frontend/entrypoints/: main.css  main.js
app/mailers/: application_mailer.rb
app/misc/: rodauth_main.rb
app/models/: account.rb  player_group.rb
app/services/: words.rb
app/views/: index.html  privacy.html
app/views/account/: index.html.erb
app/views/accounts/: change_display_name.html.erb  change_display_name_get.html.erb  index.html.erb
app/views/layouts/: application.html.erb
app/views/rodauth/: _login_form.html.erb  change_login.html.erb  change_password.html.erb  close_account.html.erb  create_account.html.erb  login.html.erb  logout.html.erb  remember.html.erb  reset_password.html.erb  reset_password_request.html.erb  verify_account.html.erb  verify_account_resend.html.erb  (+1 more)
client/: TESTING.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
client/src/: app.html
client/tests/: main.test.ts  test.ts
config/: application.rb  cable.yml  database.yml  environment.rb  routes.rb  vite.json
config/environments/: development.rb  production.rb
db/: schema.rb  seeds.rb
db/migrate/: 20220715015149_create_rodauth.rb  20220920071017_create_player_groups.rb
db/migrations/: 20240127222616_user_tables.sql
docker/: automata.base.dockerfile  dev-client.dockerfile  dev-server.dockerfile  push.sh  rustwebapp.base.dockerfile
docs/: architecture.md  dev_setup.md
docs/architecture/: level1_context.md  level2_containers.md
frontend/: package-lock.json  package.json  svelte.config.js
server/: Cargo.toml  query.sh  start.sh
server/.cargo/: config.toml
server/examples/: quick_dev.rs  tri.rs
server/migrations/2024-05-07-144033_create_users/: down.sql  up.sql
server/src/: app_state.rs  assets.rs  db.rs  env.rs  lib.rs  main.rs  schema.rs  web.rs
server/src/dictionary/: mod.rs  words.rs
server/src/middleware/: auth.rs
server/src/model/: account.rs  lobby.rs  mod.rs  user.rs
server/src/mw/: auth.rs
server/src/service/: crypto.rs  db.rs  jwt.rs  mod.rs  time.rs
server/src/web/: app_state.rs  ctx.rs  error.rs  mod.rs  routes.rs  routes_lobby.rs  routes_login.rs  routes_status.rs
server/src/web/routes/: lobby.rs  login.rs  status.rs  user.rs
server/tests/: quick_dev.rs
server/tests/shared/: db.rs  time.rs
server/tests/user/: auth.rs  create.rs  login.rs  mod.rs
server/words/: 4.txt  banned.txt
spec/: rails_helper.rb
spec/channels/: application_connection_spec.rb
spec/fixtures/: accounts.yml
spec/models/: account_spec.rb  player_group_spec.rb
spec/requests/: accounts_spec.rb
spec/services/: words_spec.rb
(+48 files in other folders)
