[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
anyhow = "1.0.82"
tower-http = { version = "0.5.2", features = ["trace"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
rust-embed = { version = "8.3.0", features = ["mime-guess"] }
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
  "tracing",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
diesel = { version = "2.1.6", features = ["postgres"] }
serde_json = "1.0.117"

[features]
default = []
embed_assets = []
quick_dev = []

[dev-dependencies]
httpc-test = { version = "0.1.9", features = ["colored", "color-output"] }
