[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error Handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Web Infra
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
rust-embed = { version = "8.3.0", features = ["mime-guess"] }

# JSON
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"

# Async Runtime
tokio = { version = "1.37.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
  "tracing",
] }

# DB ORM
diesel = { version = "2.1.6", features = ["postgres"] }

[features]
default = []
embed_assets = []
quick_dev = []

[dev-dependencies]
# Used for quick_dev tests
httpc-test = { version = "0.1.9", features = ["colored", "color-output"] }
