[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "automata"
path = "src/lib.rs"

[dependencies]
# Error Handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Web Infra
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-cookies = "0.10.0"
rust-embed = { version = "8.3.0", features = ["mime-guess"] }

# JSON
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"

# Async Runtime
tokio = { version = "1.37.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }

# DB ORM
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

# Authentication & Crypto
sha2 = "0.10.8"
rand = "0.8.5"
openssl = "0.10.64"
hmac = "0.12.1"
rsa = "0.9.6"
jsonwebtoken = "9.3.0"
async-trait = "0.1.80"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
strum_macros = "0.26.4"
# other dependencies

[dev-dependencies]
# Used for quick_dev tests
httpc-test = { version = "0.1.9", features = ["color-output"] }
lazy_static = "1.5.0"
testcontainers = "0.19.0"
testcontainers-modules = { version = "0.7.1", features = ["postgres"] }

[profile.dev.package.num-bigint-dig]
opt-level = 3

[features]
default = []
embed_assets = []
